fix: flickering in navigation

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,12 +1,12 @@
-* {
-  background-color: var(--color-background);
-  color: var(--color-foreground);
-  transition-property: color, background-color, border-color;
-  transition-duration: 200ms;
-  transition-timing-function: ease-in-out;
+body {
+  @apply bg-background;
 }
 
-body a {
+h1,h2,h3,h4,h5,p,strong,body a,li {
+  @apply text-foreground;
+}
+
+svg * {
   @apply text-foreground;
 }
 
